force-app/main/default/objects/Professeur__c/Professeur__c.object-meta.xml
<CustomObject>
    <label>Professeur</label>
    <nameField>
        <label>Nom professeur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professeurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>