force-app/main/default/objects/Professeur__c/fields/nombre_de_cours__c.field-meta.xml
<CustomField>
    <fullName>nombre_de_cours__c</fullName>
    <label>nombre de cours</label>
    <summaryForeignKey>Cours__c.professeur__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>