force-app/main/default/objects/Professeur__c/fields/personne__c.field-meta.xml
<CustomField>
    <fullName>personne__c</fullName>
    <label>personne</label>
    <referenceTo>Personne__c</referenceTo>
    <relationshipLabel>Professeurs</relationshipLabel>
    <relationshipName>Professeurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>