force-app/main/default/objects/Professeur__c/fields/Profil__c.field-meta.xml
<CustomField>
    <fullName>Profil__c</fullName>
    <label>Profil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Vaccataire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>